syntax = "proto3";
package cascadia.oracle;

option go_package = "github.com/cascadiafoundation/cascadia/x/oracle/types";

message AssetInfo {
  string denom = 1;
  string display = 2;
  string bandTicker = 3;
  string cascadiaTicker = 4;
}
