syntax = "proto3";
package cascadia.oracle;

import "gogoproto/gogo.proto";
import "cascadia/oracle/params.proto";
import "cascadia/oracle/asset_info.proto";
import "cascadia/oracle/price.proto";
import "cascadia/oracle/price_feeder.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/cascadiafoundation/cascadia/x/oracle/types";

// GenesisState defines the oracle module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  string portId = 2;
  repeated AssetInfo assetInfos = 3 [(gogoproto.nullable) = false];
  repeated Price prices = 4 [(gogoproto.nullable) = false];
  repeated PriceFeeder priceFeeders = 5 [(gogoproto.nullable) = false];
  // this line is used by starport scaffolding # genesis/proto/state
}
