syntax = "proto3";
package cascadia.oracle.v1;

option go_package = "github.com/cascadiafoundation/cascadia/x/oracle/types";

message PriceFeeder {
  string feeder = 1;
  bool is_active = 2;
}
